Update Frontkit to newest version

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": true,
   "devDependencies": {
-    "jquery": "~2.1.1",
-    "modernizr": "~2.8.3"
+    "jquery": "~1.11.2",
+    "modernizr": "~2.8.3",
+    "normalize.css": "~3.0.3"
   }
 }
