--- a/package.json
+++ b/package.json
@@ -1,23 +1,61 @@
 {
+  "frontkit": {
+    "source": "src",
+    "targets": [
+      {
+        "path": "dist",
+        "tasks": [
+          "templates",
+          "scripts",
+          "styles",
+          "images",
+          "sprites",
+          "icons",
+          "fonts",
+          "media"
+        ]
+      }
+    ],
+    "deploy": {
+      "production": {
+        "adapter": "rsync",
+        "root": "dist",
+        "port": 25000,
+        "hostname": "lamberski@assets.ubermost.com",
+        "destination": "/var/www/ubermost.com",
+        "incremental": true
+      }
+    }
+  },
   "devDependencies": {
     "del": "^1.1.1",
+    "glob": "^5.0.9",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-changed": "^1.2.1",
-    "gulp-filter": "^2.0.2",
+    "gulp-cheerio": "^0.6.2",
+    "gulp-consolidate": "^0.1.2",
+    "gulp-css-globbing": "^0.1.7",
+    "gulp-foreach": "^0.1.0",
+    "gulp-iconfont": "^1.0.1",
     "gulp-imagemin": "^2.2.1",
+    "gulp-import-css": "^0.1.2",
     "gulp-include": "^1.1.1",
-    "gulp-jsbeautifier": "0.0.8",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-replace": "^0.5.3",
+    "gulp-rename": "^1.2.2",
     "gulp-rsync": "0.0.5",
     "gulp-sass": "^1.3.3",
+    "gulp-svgstore": "^5.0.1",
     "gulp-twig": "^0.3.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "lodash": "^3.9.1",
+    "merge-stream": "^0.1.7",
     "run-sequence": "^1.0.2",
-    "vinyl-ftp": "^0.4.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-ftp": "^0.4.0",
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^3.9.1"
   }
 }
