--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "deploy": {
       "production": {
         "adapter": "rsync",
-        "files": ["dist/**/*"],
+        "files": [
+          "dist/**/*"
+        ],
         "root": "dist",
         "port": 25000,
         "hostname": "lamberski@assets.ubermost.com",
@@ -46,7 +48,7 @@
     "gulp-plumber": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rsync": "0.0.5",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.1.1",
     "gulp-svgstore": "^5.0.1",
     "gulp-twig": "^0.3.0",
     "gulp-uglify": "^1.2.0",
