--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "jquery": "~1.11.2",
     "modernizr": "~2.8.3",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "velocity": "~1.2.3"
   }
 }
