--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "jquery": "~1.11.2",
     "modernizr": "~2.8.3",
     "normalize.css": "~3.0.3",
-    "velocity": "~1.2.3"
+    "velocity": "~1.2.3",
+    "handlebars": "~4.0.5"
   }
 }
