Add theme files to the project

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 .DS_Store
 node_modules
 bower_components
-/dist
-/resources
+dist
+resources
+resources.zip
+wp/wp-content/plugins
+wp/wp-content/uploads
+wp/wp-content/upgrade
+wp/wp-admin
+wp/wp-includes
+wp/.htaccess
+wp/index.php
+wp/license.txt
+wp/readme.html
+wp/wp-*.php
+wp/wp-content/index.php
+wp/wp-content/themes/index.php
+wp/xmlrpc.php
+vendor
