--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-cheerio": "^0.6.2",
     "gulp-consolidate": "^0.1.2",
-    "gulp-css-globbing": "^0.1.7",
     "gulp-foreach": "^0.1.0",
     "gulp-iconfont": "^1.0.1",
     "gulp-imagemin": "^2.2.1",
@@ -49,6 +48,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rsync": "0.0.5",
     "gulp-sass": "^2.1.1",
+    "gulp-sass-bulk-import": "^1.0.0",
     "gulp-svgstore": "^5.0.1",
     "gulp-twig": "^0.3.0",
     "gulp-uglify": "^1.2.0",
