--- a/wp/wp-content/themes/ubermost-create/composer.json
+++ b/wp/wp-content/themes/ubermost-create/composer.json
@@ -4,7 +4,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Ubernator\\": "classes/"
+            "UbermostCreate\\": "classes/"
         }
     }
 }
