--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ resources.zip
 wp/wp-content/plugins
 wp/wp-content/uploads
 wp/wp-content/upgrade
+wp/wp-content/cache
 wp/wp-admin
 wp/wp-includes
 wp/.htaccess
