Add compiling source files to the theme too

--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
           "fonts",
           "media"
         ]
+      },
+      {
+        "path": "wp/wp-content/themes/ubermost-create/assets",
+        "tasks": [
+          "scripts",
+          "styles",
+          "images"
+        ]
       }
     ],
     "deploy": {
