--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .DS_Store
 node_modules
-bower_components
 dist
 public
 resources
-resources.zip
 wp/wp-content/plugins
 wp/wp-content/uploads
 wp/wp-content/upgrade
@@ -21,3 +19,4 @@ wp/wp-content/themes/index.php
 wp/xmlrpc.php
 vendor
 wp/wp-content/themes/ubermost-create/assets/
+deploy.json
