Require both Tumblr and Facebook APIs

--- a/wp/wp-content/themes/ubermost-create/composer.json
+++ b/wp/wp-content/themes/ubermost-create/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
-        "imagine/imagine": "0.6.*"
+        "imagine/imagine": "0.6.*",
+        "tumblr/tumblr": "^0.2.0",
+        "facebook/php-sdk-v4": "^5.2"
     },
     "autoload": {
         "psr-4": {
