--- a/wp/wp-content/themes/ubermost-create/composer.json
+++ b/wp/wp-content/themes/ubermost-create/composer.json
@@ -1,9 +1,16 @@
 {
+    "repositories": [
+        {
+            "url": "https://github.com/preillyme/bufferapp.git",
+            "type": "git"
+        }
+    ],
     "require": {
         "imagine/imagine": "0.6.*",
         "tumblr/tumblr": "^0.2.0",
         "facebook/php-sdk-v4": "^5.2",
-        "abraham/twitteroauth": "^0.6.4"
+        "abraham/twitteroauth": "^0.6.4",
+        "buffer/app": "dev-master"
     },
     "autoload": {
         "psr-4": {
