Replace Tumblr implementation with Mikrob

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
 .DS_Store
-node_modules
-dist
-public
-resources
-wp/wp-content/plugins
-wp/wp-content/uploads
-wp/wp-content/upgrade
-wp/wp-content/cache
-wp/wp-admin
-wp/wp-includes
-wp/.htaccess
-wp/index.php
-wp/license.txt
-wp/readme.html
-wp/wp-*.php
-wp/wp-content/index.php
-wp/wp-content/themes/index.php
-wp/xmlrpc.php
-vendor
-wp/wp-content/themes/ubermost-create/assets/
-deploy.json
+Thumbs.db
+/vendor
+/deploy.sh
