--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "bun index.ts"
   },
   "dependencies": {
-    "mikrob": "^2.2.0"
+    "marked": "^15.0.7",
+    "mikrob": "^2.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4"
